@@ -1,3 +1,7 @@
+2002-03-20  Yogeesh MB <yogeeshappa.mathighatta@wipro.com>
+
+	* logview.c :Removed user preference dialog, Patch #57968
+
 2002-03-26 Aruna P R <aruna.pou@wipro.com>
 
         * monitor.c: Monitor options gives the messages when tried to add more
